--- a/jspstudy2/WebContent/css/main.css
+++ b/jspstudy2/WebContent/css/main.css
@@ -4,7 +4,7 @@ th, td{
 	text-align: center;
 	padding: 8px;
 }
-th{background-color: #B7F0B1; color: #353535;}
+th{background-color: #0080FF; color: #353535;}
 td{background-color: #F2F2F2;}
 caption {
 	color: #111111; font-size: 20px; background-color: #FFFFFF;
